...
            android:layout_height="wrap_content"
            android:paddingVertical="12dp"
            android:paddingHorizontal="16dp"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/comment_username_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Username"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/comment_text_display"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="This is a comment text that could span multiple lines when it gets long enough."
                android:textColor="#E6E6E6"
                android:textSize="15sp"
...
