...
                        android:background="@android:color/transparent"
                        app:boxBackgroundColor="@android:color/transparent"
                        app:boxBackgroundMode="none"
                        app:hintTextColor="#AAAAAA">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/comment_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:hint="@string/add_a_comment"
                            android:inputType="textMultiLine"
                            android:maxLines="4"
...
                            android:textColor="#FFFFFF"
                            android:textColorHint="#AAAAAA"
                            android:textSize="16sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <ImageButton
                        android:id="@+id/confirm_comment_button"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="2dp"
                        android:background="@drawable/button_confirm_background"
...
